--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -51,6 +51,18 @@ spring:
         cache: false
     profiles:
         include: swagger # automatically set the 'swagger' profile
+    
+    hosts:
+        baseUrl: https://kong-qa.ailiens.com:8443
+        mycroftEventPath: /event
+    keycloakCreds:
+        keycloakGetAccessTokenUrl: https://keycloak-qa.ailiens.com/auth/realms/AILSecureQA/tokens/grants/access
+        Authorization: Basic b2RpblFBOjUwYjgwZDQ3LWIxMDAtNDNhMC1iMzU1LTNhMmEwYWYyYjA1MQ==
+        map:
+            NODEUSER:
+                username: nodeuser
+                password: qanode
+                client: odinQA
 
 liquibase:
     contexts: dev
