--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -42,6 +42,23 @@ spring:
             enabled: false
     thymeleaf:
         mode: XHTML
+    hosts:
+        baseUrl: https://kong-qa.ailiens.com:8443
+        mycroftEventPath: /event
+    rabbit:
+         host: localhost
+         queueLimit: 5
+         timeout: 10000
+         threadLifeTime: 10000
+         sleepInterval: 5000
+    keycloakCreds:
+        keycloakGetAccessTokenUrl: https://keycloak-qa.ailiens.com/auth/realms/AILSecureQA/tokens/grants/access
+        Authorization: Basic b2RpblFBOjUwYjgwZDQ3LWIxMDAtNDNhMC1iMzU1LTNhMmEwYWYyYjA1MQ==
+        map:
+            NODEUSER:
+                username: nodeuser
+                password: qanode
+                client: odinQA
 
 liquibase:
     contexts: test
