--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -56,11 +56,13 @@ spring:
         baseUrl: https://kong-qa.ailiens.com:8443
         mycroftEventPath: /event
     rabbit:
-         host: localhost
+         host: 52.77.16.64
          queueLimit: 5
          timeout: 10000
          threadLifeTime: 10000
          sleepInterval: 5000
+         username: holmesqanew
+         password: holmesqanew
     keycloakCreds:
         keycloakGetAccessTokenUrl: https://keycloak-qa.ailiens.com/auth/realms/AILSecureQA/tokens/grants/access
         Authorization: Basic b2RpblFBOjUwYjgwZDQ3LWIxMDAtNDNhMC1iMzU1LTNhMmEwYWYyYjA1MQ==
