maxWaitTime and enums

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -61,6 +61,7 @@ spring:
          timeout: 10000
          threadLifeTime: 10000
          sleepInterval: 5000
+         maxWaitTime: 15
          username: holmesqanew
          password: holmesqanew
     keycloakCreds:
