--- a/build.gradle
+++ b/build.gradle
@@ -197,6 +197,7 @@ dependencies {
     compile 'com.mashape.unirest:unirest-java:1.4.9'
     compile 'com.hazelcast:hazelcast:3.7.1'
     compile 'com.hazelcast:hazelcast-client:3.7.1'
+    compile 'com.google.inject:guice:4.1.0'
 }
 
 clean {
