--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -53,7 +53,7 @@ spring:
         include: swagger # automatically set the 'swagger' profile
 
     hosts:
-        baseUrl: https://kong-qa.ailiens.com:8443
+        baseUrl: https://54.169.50.213:8443
         mycroftEventPath: /event
     rabbit:
          host:  52.77.16.64
@@ -66,7 +66,7 @@ spring:
          password: holmesqanew
          poolSize: 5
     keycloakCreds:
-        keycloakGetAccessTokenUrl: https://keycloak-qa.ailiens.com/auth/realms/AILSecureQA/tokens/grants/access
+        keycloakGetAccessTokenUrl: https://54.169.57.64/auth/realms/AILSecureQA/tokens/grants/access
         Authorization: Basic b2RpblFBOjUwYjgwZDQ3LWIxMDAtNDNhMC1iMzU1LTNhMmEwYWYyYjA1MQ==
         cacheDuration: 10
         map:
