--- a/build.gradle
+++ b/build.gradle
@@ -8,48 +8,66 @@ buildscript {
         maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:${spring_boot_version}"
+        classpath "io.spring.gradle:dependency-management-plugin:0.5.6.RELEASE"
+
         classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.0.1"
         classpath "net.ltgt.gradle:gradle-apt-plugin:0.6"
-        classpath "org.springframework.boot:spring-boot-gradle-plugin:${spring_boot_version}"
         classpath "org.springframework.build.gradle:propdeps-plugin:0.0.7"
         classpath "com.moowork.gradle:gradle-node-plugin:0.12"
         classpath "com.moowork.gradle:gradle-gulp-plugin:0.12"
         classpath "se.transmode.gradle:gradle-docker:1.2"
-        classpath "io.spring.gradle:dependency-management-plugin:0.5.6.RELEASE"
+
         //jhipster-needle-gradle-buildscript-dependency - JHipster will add additional gradle build script plugins here
     }
 }
 
 apply plugin: 'java'
-sourceCompatibility=1.8
-targetCompatibility=1.8
 apply plugin: 'maven'
 apply plugin: 'spring-boot'
-apply plugin: 'war'
 apply plugin: 'propdeps'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'net.ltgt.apt'
 apply plugin: 'maven-publish'
+
+jar {
+    baseName = 'msg'
+    version = '0.0.1'
+}
+
+bootRepackage {
+    mainClass = 'com.aliens.hipster.MsgApp'
+}
+
+gradle.taskGraph.whenReady { graph ->
+    def badTasks = ['findMainClass', 'startScripts', 'distTar', 'distZip']
+    graph.allTasks.findAll {it.name in badTasks}.each { task ->
+        task.enabled = false
+    }
+}
+
+
+
+
 /* downgrade Hibernate to 4.3 */
 ext['hibernate.version'] = '${hibernate_entitymanager_version}'
 defaultTasks 'bootRun'
 
-bootRepackage {
-   mainClass = 'com.aliens.hipster.MsgApp'
-}
 
-war {
-    rootSpec.exclude("**/tomcat-*.jar")
-}
 
 springBoot {
     mainClass = 'com.aliens.hipster.MsgApp'
     executable = true
 }
 
+
 bootRun {
     addResources = false
+    systemProperties = System.properties
 }
+
+sourceCompatibility=1.8
+targetCompatibility=1.8
 
 test {
     include '**/*UnitTest*'
@@ -198,17 +216,99 @@ dependencies {
     compile 'com.mashape.unirest:unirest-java:1.4.9'
     compile 'com.hazelcast:hazelcast:3.7.1'
     compile 'com.hazelcast:hazelcast-client:3.7.1'
-}
 
+    //compile project(':common')
+}
 
 configurations {
     all*.exclude group: 'javassist'
 }
 
-jar {
-    baseName = 'msg'
-    version = '0.0.1'
+
+subprojects {
+    apply plugin: 'java'
+    apply plugin: 'maven'
+    apply plugin: 'spring-boot'
+    apply plugin: 'propdeps'
+    apply plugin: 'io.spring.dependency-management'
+    apply plugin: 'net.ltgt.apt'
+    apply plugin: 'maven-publish'
+
+    buildscript{
+        repositories {
+            mavenLocal()
+            mavenCentral()
+            jcenter()
+            maven { url "http://repo.spring.io/plugins-release" }
+            maven { url "http://repo.spring.io/milestone" }
+            maven { url "https://plugins.gradle.org/m2/" }
+        }
+        dependencies {
+            classpath "org.springframework.boot:spring-boot-gradle-plugin:${spring_boot_version}"
+            classpath "io.spring.gradle:dependency-management-plugin:0.5.6.RELEASE"
+
+            classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.0.1"
+            classpath "net.ltgt.gradle:gradle-apt-plugin:0.6"
+            classpath "org.springframework.build.gradle:propdeps-plugin:0.0.7"
+            classpath "com.moowork.gradle:gradle-node-plugin:0.12"
+            classpath "com.moowork.gradle:gradle-gulp-plugin:0.12"
+            classpath "se.transmode.gradle:gradle-docker:1.2"
+
+            //jhipster-needle-gradle-buildscript-dependency - JHipster will add additional gradle build script plugins here
+        }
+    }
+
+    repositories {
+        mavenLocal()
+        mavenCentral()
+        jcenter()
+        maven { url 'http://repo.spring.io/milestone' }
+        maven { url 'http://repo.spring.io/snapshot' }
+        maven { url 'https://repository.jboss.org/nexus/content/repositories/releases' }
+        maven { url 'https://oss.sonatype.org/content/repositories/releases' }
+        maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
+        maven { url 'http://repo.maven.apache.org/maven2' }
+    }
+
+
+    dependencies {
+
+        compile localGroovy()
+        compile 'org.projectlombok:lombok:1.16.10'
+
+        compile "org.springframework.boot:spring-boot-actuator"
+        compile "org.springframework.boot:spring-boot-autoconfigure"
+        compile "org.springframework.boot:spring-boot-loader-tools"
+        compile "org.springframework.boot:spring-boot-starter-logging"
+        compile "org.springframework.boot:spring-boot-starter-aop"
+        compile "org.springframework.boot:spring-boot-starter-data-jpa"
+        compile "org.springframework.boot:spring-boot-starter-security"
+        compile "org.springframework.boot:spring-boot-starter-web"
+        compile "org.springframework.boot:spring-boot-starter-thymeleaf"
+        compile "org.springframework.cloud:spring-cloud-cloudfoundry-connector"
+        compile "org.springframework.cloud:spring-cloud-spring-service-connector"
+        compile "org.springframework.cloud:spring-cloud-localconfig-connector"
+        compile ("org.springframework:spring-context-support") {
+            exclude(module: 'quartz')
+        }
+        compile "org.springframework.security:spring-security-config:${spring_security_version}"
+        compile "org.springframework.security:spring-security-data:${spring_security_version}"
+        compile "org.springframework.security:spring-security-web:${spring_security_version}"
+
+        compile("io.springfox:springfox-swagger2:${springfox_version}"){
+            exclude module: 'mapstruct'
+        }
+    }
+
+    bootRepackage {
+        mainClass = 'com.aliens.common.Dummy'
+    }
 }
+
+dependencies
+    {
+        compile project(':common')
+    }
 
 clean {
     delete "target"
@@ -227,3 +327,6 @@ task stage(dependsOn: 'bootRepackage') {
 
 compileJava.dependsOn processResources
 processResources.dependsOn cleanResources
+
+
+
