--- a/build.gradle
+++ b/build.gradle
@@ -196,8 +196,10 @@ dependencies {
     apt 'org.projectlombok:lombok:1.16.10'
     compile 'com.rabbitmq:amqp-client:3.6.5'
     compile 'com.mashape.unirest:unirest-java:1.4.9'
+
     compile 'com.hazelcast:hazelcast:3.7.1'
     compile 'com.hazelcast:hazelcast-client:3.7.1'
+    compile "com.hazelcast:hazelcast-cloud:3.6.1"
 }
 
 
