--- a/src/main/resources/config/application-local.yml
+++ b/src/main/resources/config/application-local.yml
@@ -67,14 +67,14 @@ spring:
          poolSize: 5
     hazelcast:
          aws: false
-         awsUrl: http://test.com
+         awsUrl: http://169.254.169.254
          instanceName: msg
          port: 5701
          accessKey: test
          secretKey: test
-         regionCode: test
-         tagKey: test
-         tagValue: test
+         regionCode: us-east-1
+         tagKey: application2
+         tagValue: msg
 
 
     keycloakCreds:
