--- a/build.gradle
+++ b/build.gradle
@@ -197,9 +197,10 @@ dependencies {
     compile 'com.rabbitmq:amqp-client:3.6.5'
     compile 'com.mashape.unirest:unirest-java:1.4.9'
 
-    compile 'com.hazelcast:hazelcast:3.7.1'
-    compile 'com.hazelcast:hazelcast-client:3.7.1'
-    compile "com.hazelcast:hazelcast-cloud:3.6.1"
+    compile "com.hazelcast:hazelcast:${hazelcast_version}"
+    compile "com.hazelcast:hazelcast-hibernate4:${hazelcast_version}"
+    compile "com.hazelcast:hazelcast-spring:${hazelcast_version}"
+    compile "com.hazelcast:hazelcast-cloud:${hazelcast_version}"
 }
 
 
