--- a/gradle.properties
+++ b/gradle.properties
@@ -28,6 +28,7 @@ h2_version=1.4.188
 
 gatling_version=2.1.7
 mapstruct_version=1.0.0.Final
+hazelcast_version=3.6.1
 
 
 ## below are some of the gradle performance improvement settings that can be used as required, these are not enabled by default
