--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
         classpath "com.moowork.gradle:gradle-node-plugin:0.12"
         classpath "com.moowork.gradle:gradle-gulp-plugin:0.12"
         classpath "se.transmode.gradle:gradle-docker:1.2"
+        classpath 'com.github.townsfolk:gradle-release:1.2'
 
         //jhipster-needle-gradle-buildscript-dependency - JHipster will add additional gradle build script plugins here
     }
@@ -29,6 +30,7 @@ apply plugin: 'propdeps'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'net.ltgt.apt'
 apply plugin: 'maven-publish'
+apply plugin: 'release'
 
 jar {
     baseName = 'msg'
@@ -232,6 +234,7 @@ subprojects {
     apply plugin: 'io.spring.dependency-management'
     apply plugin: 'net.ltgt.apt'
     apply plugin: 'maven-publish'
+    apply plugin: 'release'
 
     dependencyManagement {
         imports {
@@ -258,6 +261,7 @@ subprojects {
             classpath "com.moowork.gradle:gradle-node-plugin:0.12"
             classpath "com.moowork.gradle:gradle-gulp-plugin:0.12"
             classpath "se.transmode.gradle:gradle-docker:1.2"
+            classpath 'com.github.townsfolk:gradle-release:1.2'
 
             //jhipster-needle-gradle-buildscript-dependency - JHipster will add additional gradle build script plugins here
         }
@@ -310,6 +314,52 @@ subprojects {
     }
 
 
+
+    repositories {
+        flatDir {
+            name "fileRepo"
+            dirs "build/libs"
+        }
+    }
+
+
+    release {
+        failOnSnapshotDependencies = false
+        tagPrefix = 'RELEASE'
+        git.requireBranch = null
+        failOnPublishNeeded = true
+    }
+
+
+
+
+
+    task sourceJar(type: Jar) {
+        classifier = 'sources'
+        from sourceSets.main.allSource
+    }
+
+    artifacts {
+        archives sourceJar
+    }
+
+    uploadArchives {
+        repositories.mavenDeployer {
+
+            repository(
+                url: 'http://scrolls.ailiens.com:8081/repository/maven-releases/')
+                {
+                    authentication(userName: "admin", password: "admin123")
+                }
+        }
+    }
+
+
+    createReleaseTag.dependsOn subprojects.tasks.uploadArchives
+
+
+
+    ext.'gradle.release.useAutomaticVersion' = "true"
 }
 
 dependencies
@@ -334,6 +384,9 @@ task stage(dependsOn: 'bootRepackage') {
 
 compileJava.dependsOn processResources
 processResources.dependsOn cleanResources
+
+
+
 
 
 
