--- a/build.gradle
+++ b/build.gradle
@@ -82,21 +82,19 @@ test {
 
 
 
-task testReport(type: TestReport) {
-    destinationDir = file("$buildDir/reports/tests")
-    reportOn test
-}
+
 
 
 
 apply from: 'gradle/yeoman.gradle'
-apply from: 'gradle/sonar.gradle'
+
 
 apply from: 'gradle/liquibase.gradle'
 
 apply from: 'gradle/gatling.gradle'
 apply from: 'gradle/mapstruct.gradle'
 apply from: 'gradle/docker.gradle'
+apply from: 'gradle/coverage.gradle'
 //jhipster-needle-gradle-apply-from - JHipster will add additional gradle scripts to be applied here
 
 if (project.hasProperty('prod')) {
