--- a/gradle/sonar.gradle
+++ b/gradle/sonar.gradle
@@ -1,12 +1,12 @@
 apply plugin: "org.sonarqube"
 apply plugin: 'jacoco'
 
-jacoco {
-    toolVersion = '0.7.6.201602180812'
-}
+//jacoco {
+//    toolVersion = '0.7.6.201602180812'
+//}
 
-jacocoTestReport {
-    reports {
-        xml.enabled true
-    }
-}
+//jacocoTestReport {
+//    reports {
+//        xml.enabled true
+//    }
+//}
