--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,6 @@ rootProject.name = 'ailiens-common'
 include 'msg-publisher'
 include 'main'
 include 'restutil'
+include 'msg-receiver'
+include 'msg-common'
 
