--- a/build.gradle
+++ b/build.gradle
@@ -271,14 +271,14 @@ subprojects {
         optional "org.springframework.boot:spring-boot-configuration-processor:${spring_boot_version}"
         //jhipster-needle-gradle-dependency - JHipster will add additional dependencies here
 
-        //msg
+        //commons
         provided 'org.projectlombok:lombok:1.16.10'
         apt 'org.projectlombok:lombok:1.16.10'
         compile 'com.rabbitmq:amqp-client:3.6.5'
         compile 'com.mashape.unirest:unirest-java:1.4.9'
-        compile 'com.hazelcast:hazelcast:3.7.1'
-        compile 'com.hazelcast:hazelcast-client:3.7.1'
         compile 'org.springframework.retry:spring-retry:1.1.4.RELEASE'
+        compile 'com.google.code.gson:gson:2.8.0'
+
 
 
         configurations {
