--- a/settings.gradle
+++ b/settings.gradle
@@ -9,4 +9,5 @@ include 'message-sender'
 include 'common'
 include 'graphite-reporter'
 include 'graphite-reporter-extensions'
+include 'ando-models'
 
