--- a/settings.gradle
+++ b/settings.gradle
@@ -10,4 +10,5 @@ include 'common'
 include 'graphite-reporter'
 include 'graphite-reporter-extensions'
 include 'ando-models'
+include 'galactus-models'
 
