--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,7 @@ include 'common'
 include 'graphite-reporter'
 include 'graphite-reporter-extensions'
 include 'ando-models'
-include 'msg-publisher-extension-spring-jpa'
 include 'galactus-models'
+include 'msg-publisher-extension-spring-jpa'
+include 'security-adapter'
 
