--- a/build.gradle
+++ b/build.gradle
@@ -223,7 +223,7 @@ configure (subprojects
     -project(':msg-receiver')
     -project(':ando-models')
     -project(':galactus-models')
-    -project(':msg-publisher-extension-spring-jpa')
+    -project(':msg-adapter-spring-jpa')
     -project(':security-adapter')
 
 ){
@@ -391,6 +391,7 @@ project(':msg-receiver')
         dependencies
             {
                 compile project(':msg-common')
+                compile project(':msg-adapter-spring-jpa')
                 compile 'org.apache.commons:commons-lang3:3.3.2'
                 compile "io.dropwizard.metrics:metrics-core"
                 compile "io.dropwizard.metrics:metrics-annotation:${dropwizard_metrics_version}"
@@ -415,7 +416,7 @@ project(':restutil')
             }
     }
 
-project(':msg-publisher-extension-spring-jpa')
+project(':msg-adapter-spring-jpa')
     {
         dependencies {
             compile project(':msg-common')
@@ -428,7 +429,7 @@ project(':msg-publisher')
         dependencies
             {
                 compile project(':msg-common')
-                compile project(':msg-publisher-extension-spring-jpa')
+                compile project(':msg-adapter-spring-jpa')
 
                 compile 'com.rabbitmq:amqp-client:3.6.5'
                 compile 'org.apache.commons:commons-lang3:3.3.2'
