--- a/settings.gradle
+++ b/settings.gradle
@@ -11,6 +11,6 @@ include 'graphite-reporter'
 include 'graphite-reporter-extensions'
 include 'ando-models'
 include 'galactus-models'
-include 'msg-publisher-extension-spring-jpa'
+include 'msg-adapter-spring-jpa'
 include 'security-adapter'
 
