--- a/settings.gradle
+++ b/settings.gradle
@@ -13,4 +13,5 @@ include 'ando-models'
 include 'galactus-models'
 include 'msg-adapter-spring-jpa'
 include 'security-adapter'
+include 'msg-adapter-cassandra'
 
