MsgEventHandler Improvents and test code for msg

--- a/main/src/main/resources/config/application-local.yml
+++ b/main/src/main/resources/config/application-local.yml
@@ -93,6 +93,12 @@ liquibase:
 server:
     port: 8020
 
+
+MSG:
+  env: local
+  userName: guest
+  password: guest
+
 # ===================================================================
 # JHipster specific properties
 # ===================================================================
