--- a/main/src/test/resources/config/application.yml
+++ b/main/src/test/resources/config/application.yml
@@ -73,9 +73,9 @@ server:
 
 
 MSG:
-  env: qa
+  env: localhost
   userName: guest
-  password: wrongpass
+  password: guest
 
 
 # ===================================================================
